oksy добавлен lazyload для всех изображений

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -86,8 +86,8 @@
 					</div>
 				</div>
 				<div class="header-burger">
-					<img src="img/burger-btn.png" class="bb1">
-					<img src="img/burger-btn2.png" class="bb2">
+					<img data-src="img/burger-btn.png" class="bb1" class="lazyload">
+					<img data-src="img/burger-btn2.png" class="bb2" class="lazyload">
 				</div>
 			</div>
 		</div>
@@ -96,7 +96,7 @@
 	<section class="main-section">
 		<div class="container">
 			<div class="main-girl">
-				<img src="img/girl-img.png">
+				<img data-src="img/girl-img.png" class="lazyload">
 			</div>
 			<div class="main-wrapper">
 				<div class="main-left">
@@ -136,13 +136,13 @@
 			</div>
 		</div>
 		<div class="main-ring_medium main-ring_icon">
-			<img src="img/main-ring_medium.png">
+			<img data-src="img/main-ring_medium.png" class="lazyload">
 		</div>
 		<div class="main-ring_big main-ring_icon">
-			<img src="img/main-ring_big.png">
+			<img data-src="img/main-ring_big.png" class="lazyload">
 		</div>
 		<div class="main-ring_small main-ring_icon">
-			<img src="img/main-ring_small.png">
+			<img data-src="img/main-ring_small.png" class="lazyload">
 		</div>
 	</section>
 	<!-- group -->
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 				<div class="group-right">
-					<img src="img/group-img1.png">
+					<img data-src="img/group-img1.png" class="lazyload">
 				</div>
 			</div>
 		</div>
@@ -457,7 +457,7 @@
 						<h2>Комплексный подход</h2>
 					</div>
 					<div class="comments-img2">
-						<img src="img/comments-img.png">
+						<img data-src="img/comments-img.png" class="lazyload">
 					</div>
 					<div class="comments-text">
 						<p>Художественная гимнастика — это не только физический, но и умственный вид спорта. Своих
@@ -473,7 +473,7 @@
 				</div>
 				<div class="comments-right">
 					<div class="comments-img">
-						<img src="img/comments-img.png">
+						<img data-src="img/comments-img.png" class="lazyload">
 					</div>
 				</div>
 			</div>
@@ -506,9 +506,9 @@
 				</div>
 				<div class="about-right">
 					<div class="about-img wow animate__animated animate__fadeIn">
-						<img src="img/about-img.png">
+						<img data-src="img/about-img.png" class="lazyload">
 						<div class="about-img_ring1">
-							<img src="img/about-ring1.svg">
+							<img data-src="img/about-ring1.svg" class="lazyload">
 						</div>
 					</div>
 				</div>
@@ -523,9 +523,9 @@
 			<div class="about-wrapper">
 				<div class="about-right">
 					<div class="about-img about-img2">
-						<img src="img/about-img2.png">
+						<img data-src="img/about-img2.png" class="lazyload">
 						<div class="about-img_ring1 wow animate__animated animate__rotateIn">
-							<img src="img/about-ring1.svg">
+							<img data-src="img/about-ring1.svg" class="lazyload">
 						</div>
 					</div>
 				</div>
@@ -564,12 +564,12 @@
 			<div class="says-wrapper">
 				<div class="says-left">
 					<div class="says-img">
-						<img src="img/says-img1.png">
+						<img data-src="img/says-img1.png" class="lazyload">
 					</div>
 				</div>
 				<div class="says-right animate__animated wow animate__backInRight">
 					<div class="says-quote">
-						<img src="img/says-quote.png">
+						<img data-src="img/says-quote.png" class="lazyload">
 					</div>
 					<div class="says-title title">
 						<h2>Что говорит наш тренер?</h2>
@@ -587,7 +587,7 @@
 			</div>
 		</div>
 		<div class="says-circle">
-			<img src="img/says-circle.png">
+			<img data-src="img/says-circle.png" class="lazyload">
 		</div>
 	</section>
 	<!-- gallery -->
@@ -600,23 +600,23 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img1.png">
+						<img data-src="img/gallery-img1.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img2.png">
+								<img data-src="img/gallery-img2.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img3.png">
+								<img data-src="img/gallery-img3.png" class="lazyload">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img4.png">
+								<img data-src="img/gallery-img4.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img5.png">
+								<img data-src="img/gallery-img5.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -624,23 +624,23 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img6.png">
+						<img data-src="img/gallery-img6.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img7.png">
+								<img data-src="img/gallery-img7.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img8.png">
+								<img data-src="img/gallery-img8.png" class="lazyload">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img9.png">
+								<img data-src="img/gallery-img9.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img10.png">
+								<img data-src="img/gallery-img10.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -648,23 +648,23 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img11.png">
+						<img data-src="img/gallery-img11.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img12.png">
+								<img data-src="img/gallery-img12.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img13.png">
+								<img data-src="img/gallery-img13.png" class="lazyload">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img14.png">
+								<img data-src="img/gallery-img14.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img15.png">
+								<img data-src="img/gallery-img15.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -672,23 +672,23 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img16.png">
+						<img data-src="img/gallery-img16.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img17.png">
+								<img data-src="img/gallery-img17.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img18.png">
+								<img data-src="img/gallery-img18.png" class="lazyload">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img19.png">
+								<img data-src="img/gallery-img19.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img20.png">
+								<img data-src="img/gallery-img20.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -696,23 +696,23 @@
 				<!-- galley-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img21.png">
+						<img data-src="img/gallery-img21.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img22.png">
+								<img data-src="img/gallery-img22.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img23.png">
+								<img data-src="img/gallery-img23.png" class="lazyload">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img24.png">
+								<img data-src="img/gallery-img24.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img25.png">
+								<img data-src="img/gallery-img25.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -720,23 +720,23 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img26.png">
+						<img data-src="img/gallery-img26.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img27.png">
+								<img data-src="img/gallery-img27.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img28.png">
+								<img data-src="img/gallery-img28.png" class="lazyload">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img29.png">
+								<img data-src="img/gallery-img29.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img30.png">
+								<img data-src="img/gallery-img30.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -744,15 +744,15 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<img src="img/gallery-img31.png">
+						<img data-src="img/gallery-img31.png" class="lazyload">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<img src="img/gallery-img32.png">
+								<img data-src="img/gallery-img32.png" class="lazyload">
 							</div>
 							<div class="gallery-item">
-								<img src="img/gallery-img33.png">
+								<img data-src="img/gallery-img33.png" class="lazyload">
 							</div>
 						</div>
 					</div>
@@ -767,88 +767,88 @@
 			</div>
 			<div class="gallery-wrapper gallery-wrapper2">
 				<div class="gallery-item">
-					<img src="img/gallery-img2.png">
+					<img data-src="img/gallery-img2.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img3.png">
+					<img data-src="img/gallery-img3.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img4.png">
+					<img data-src="img/gallery-img4.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img5.png">
-				</div>
-
-				<div class="gallery-item">
-					<img src="img/gallery-img7.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img8.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img9.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img10.png">
+					<img data-src="img/gallery-img5.png" class="lazyload">
 				</div>
 
 				<div class="gallery-item">
-					<img src="img/gallery-img12.png">
+					<img data-src="img/gallery-img7.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img13.png">
+					<img data-src="img/gallery-img8.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img14.png">
+					<img data-src="img/gallery-img9.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img15.png">
-				</div>
-
-				<div class="gallery-item">
-					<img src="img/gallery-img17.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img18.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img19.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img20.png">
+					<img data-src="img/gallery-img10.png" class="lazyload">
 				</div>
 
 				<div class="gallery-item">
-					<img src="img/gallery-img22.png">
+					<img data-src="img/gallery-img12.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img23.png">
+					<img data-src="img/gallery-img13.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img24.png">
+					<img data-src="img/gallery-img14.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img25.png">
-				</div>
-
-				<div class="gallery-item">
-					<img src="img/gallery-img27.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img28.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img29.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img30.png">
+					<img data-src="img/gallery-img15.png" class="lazyload">
 				</div>
 
 				<div class="gallery-item">
-					<img src="img/gallery-img32.png">
+					<img data-src="img/gallery-img17.png" class="lazyload">
 				</div>
 				<div class="gallery-item">
-					<img src="img/gallery-img33.png">
+					<img data-src="img/gallery-img18.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img19.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img20.png" class="lazyload">
+				</div>
+
+				<div class="gallery-item">
+					<img data-src="img/gallery-img22.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img23.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img24.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img25.png" class="lazyload">
+				</div>
+
+				<div class="gallery-item">
+					<img data-src="img/gallery-img27.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img28.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img29.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img30.png" class="lazyload">
+				</div>
+
+				<div class="gallery-item">
+					<img data-src="img/gallery-img32.png" class="lazyload">
+				</div>
+				<div class="gallery-item">
+					<img data-src="img/gallery-img33.png" class="lazyload">
 				</div>
 			</div>
 		</div>
@@ -1058,7 +1058,7 @@
 	<div class="hidden">
 		<div class="popup-wrapper" id="popup-wrapper">
 			<div class="popup-close">
-				<img src="img/popup-close.png">
+				<img data-src="img/popup-close.png" class="lazyload">
 			</div>
 			<div class="popup-title">
 				Оставьте отзыв о нашем клубе!
@@ -1082,7 +1082,7 @@
 	<div class="hidden">
 		<form class="popup-wrapper" id="popup-wrapper2" method="POST" action="mail.php">
 			<div class="popup-close">
-				<img src="img/popup-close.png">
+				<img data-src="img/popup-close.png" class="lazyload">
 			</div>
 			<div class="popup-title">
 				Оставьте заявку, чтобы узнать все подробности, и наш менеджер перезвонит вам
