oksy - lazy load для недобавленных ранее

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -26,21 +26,21 @@
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
-<div class="yudevices">
-	<div class="yudevices__phone">
+<div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
+	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
 		<iframe src="index_mobile.html"></iframe>
 	</div>
 </div>
 <div class="yuchoise">
 	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
-		<img src="portfolio-interface/desktop-icon.svg">
+		<img data-src="portfolio-interface/desktop-icon.svg" class="lazyload">
 	</div>
 	<div class="yuchoise__item yuchoise__item--mobile">
-		<img src="portfolio-interface/smartphone-call.svg">
+		<img data-src="portfolio-interface/smartphone-call.svg" class="lazyload">
 	</div>
 </div>
 <a href="../../index.html" target="_blank" class="yuchoise__menu">
-	<img src="portfolio-interface/more.svg">
+	<img data-src="portfolio-interface/more.svg" class="lazyload">
 </a>
 <!-- portfolio interface -->
 
@@ -1023,9 +1023,11 @@
 				<div class="contacts-socials">
 					<ul class="footer-socials">
 						<li><a href="https://www.facebook.com/Gymnastics-by-Oksy-Mathews-145659090984151/"><img
-									src="img/facebook-icon.svg"></a></li>
-						<li><a href="https://vk.com/gymnasticsbyoksymathews"><img src="img/vk-icon.svg"></a></li>
-						<li><a href="https://instagram.com/oksy_gym"><img src="img/instagram-icon.svg"></a></li>
+									data-src="img/facebook-icon.svg" class="lazyload"></a></li>
+						<li><a href="https://vk.com/gymnasticsbyoksymathews"><img data-src="img/vk-icon.svg"
+									class="lazyload"></a></li>
+						<li><a href="https://instagram.com/oksy_gym"><img data-src="img/instagram-icon.svg"
+									class="lazyload"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -1041,14 +1043,17 @@
 				</div>
 				<ul class="footer-socials">
 					<li><a href="https://www.facebook.com/Gymnastics-by-Oksy-Mathews-145659090984151/"><img
-								src="img/facebook-icon.svg"></a></li>
-					<li><a href="https://vk.com/gymnasticsbyoksymathews"><img src="img/vk-icon.svg"></a></li>
-					<li><a href="https://instagram.com/oksy_gym"><img src="img/instagram-icon.svg"></a></li>
+								data-src="img/facebook-icon.svg" class="lazyload"></a></li>
+					<li><a href="https://vk.com/gymnasticsbyoksymathews"><img data-src="img/vk-icon.svg"
+								class="lazyload"></a></li>
+					<li><a href="https://instagram.com/oksy_gym"><img data-src="img/instagram-icon.svg"
+								class="lazyload"></a></li>
 				</ul>
 				<div class="footer-gasfort">
 					<span>Дизайн</span>
 					<div class="footer-gasfort_img">
-						<a href="http://gasfort.ru"><img src="img/gasfort.svg" alt="разработка от gasfort"></a>
+						<a href="http://gasfort.ru"><img data-src="img/gasfort.svg" class="lazyload"
+								alt="разработка от gasfort"></a>
 					</div>
 				</div>
 			</div>
