oksy - вторая попытка webp

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -89,11 +89,11 @@
 				<div class="header-burger">
 					<picture>
 						<source srcset="img/burger-btn.webp" type="image/webp">
-						<img data-src="img/burger-btn.png" class="bb1" class="lazyload">
+						<img data-src="img/burger-btn.png" class="bb1 lazyload">
 					</picture>
 					<picture>
 						<source srcset="img/burger-btn2.webp" type="image/webp">
-						<img data-src="img/burger-btn2.png" class="bb2" class="lazyload">
+						<img data-src="img/burger-btn2.png" class="bb2 lazyload">
 					</picture>
 				</div>
 			</div>
