oksy - index_mobile заменён

--- a/sites/1_new-lex/index_mobile.html
+++ b/sites/1_new-lex/index_mobile.html
@@ -10,12 +10,8 @@
 	<link rel="stylesheet" href="libs/slick-slider/slick.css">
 	<!-- Magnific Popup CSS -->
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
-	<!-- Google Fonts Manrope -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600&display=swap" rel="stylesheet">
 	<!-- Animate CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<link rel="stylesheet" href="css/animate.min.css" />
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.min.css">
@@ -58,7 +54,7 @@
 						</li>
 					</ul>
 					<div class="header__nav-close">
-						<img src="img/close-icon.svg">
+						<img data-src="img/close-icon.svg" class="lazyload">
 					</div>
 					<div class="header__nav-socials">
 						<a href="#" class="header__nav-link">
@@ -157,7 +153,7 @@
 						</h2>
 					</div>
 					<div class="how__img">
-						<img src="img/how-img.svg">
+						<img data-src="img/how-img.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="how__right animate__fadeInRight animate__animated wow">
@@ -267,7 +263,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -287,7 +283,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -307,7 +303,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -331,7 +327,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -351,7 +347,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -371,7 +367,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -395,7 +391,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -415,7 +411,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -435,7 +431,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -459,7 +455,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -479,7 +475,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -499,7 +495,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -544,7 +540,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -564,7 +560,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -584,7 +580,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -611,7 +607,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -631,7 +627,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -651,7 +647,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -678,7 +674,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -698,7 +694,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -718,7 +714,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -745,7 +741,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -765,7 +761,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -785,7 +781,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -898,7 +894,7 @@
 			<div class="work__box animate__animated wow animate__zoomInDown">
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img1.svg">
+						<img data-src="img/work-img1.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -912,12 +908,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img2.svg">
+						<img data-src="img/work-img2.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -930,12 +926,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img3.svg">
+						<img data-src="img/work-img3.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -948,12 +944,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img4.svg">
+						<img data-src="img/work-img4.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -966,12 +962,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img5.svg">
+						<img data-src="img/work-img5.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -984,7 +980,7 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 			</div>
@@ -1007,7 +1003,7 @@
 			<div class="why__box">
 				<div class="why__item why__item--first">
 					<div class="why__item-img why__item-img--first">
-						<img src="img/why-img1.svg">
+						<img data-src="img/why-img1.svg" class="lazyload">
 					</div>
 					<div class="why__item-text">
 						На связи любым удобным для Вас способом 24/7: личный кабинет, почта, мессенджер, телефон
@@ -1015,7 +1011,7 @@
 				</div>
 				<div class="why__item why__item--second">
 					<div class="why__item-img why__item-img--second">
-						<img src="img/why-img2.svg">
+						<img data-src="img/why-img2.svg" class="lazyload">
 					</div>
 					<div class="why__item-text">
 						Юристы и бухгалтеры широкого профиля с большим опытом
@@ -1024,7 +1020,7 @@
 				</div>
 				<div class="why__item why__item--last">
 					<div class="why__item-img">
-						<img src="img/why-img3.svg">
+						<img data-src="img/why-img3.svg" class="lazyload">
 					</div>
 					<div class="why__item-text">
 						С нашим сервисом снижаются расходы на персонал
@@ -1049,12 +1045,12 @@
 							<a href="#popup" class="popup-link ask__btn btn--white">Получить консультацию</a>
 						</div>
 						<div class="ask__btn-icon">
-							<img src="img/one-btn-icon.svg">
+							<img data-src="img/one-btn-icon.svg" class="lazyload">
 						</div>
 					</div>
 				</div>
 				<div class="ask__right">
-					<img src="img/ask-img.svg">
+					<img data-src="img/ask-img.svg" class="lazyload">
 				</div>
 			</div>
 		</div>
@@ -1073,7 +1069,7 @@
 						</h2>
 					</div>
 					<div class="serv__img animate__animated wow animate__jackInTheBox">
-						<img src="img/serv-img.svg">
+						<img data-src="img/serv-img.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="serv__right">
@@ -1103,7 +1099,7 @@
 						</h2>
 					</div>
 					<div class="serv__img animate__animated wow animate__jackInTheBox">
-						<img src="img/inc-img.svg">
+						<img data-src="img/inc-img.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="serv__right">
@@ -1133,7 +1129,7 @@
 			<div class="inter__box">
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img1.svg">
+						<img data-src="img/inter-img1.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						После заключения договора с Вами связывается бухгалтер, который будет осуществлять обслуживание
@@ -1142,7 +1138,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img2.svg">
+						<img data-src="img/inter-img2.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						Сложные вопросы передаются для решения консультантам
@@ -1150,7 +1146,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img3.svg">
+						<img data-src="img/inter-img3.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						Виды связи с бухгалтером: электронная почта, телефон, WatsApp
@@ -1158,7 +1154,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img4.svg">
+						<img data-src="img/inter-img4.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						Время подготовки первичных документов — 1 час
@@ -1172,7 +1168,7 @@
 		<div class="container">
 			<div class="footer__top">
 				<div class="footer__logo">
-					<img src="img/logo.svg">
+					<img data-src="img/logo.svg" class="lazyload">
 				</div>
 				<div class="footer__column">
 					<a href="#" class="footer__list">Юридическое сопровождение</a>
@@ -1192,10 +1188,10 @@
 					<a href="tel:79999999999" class="footer__phone">+7 (999) 999-99-99</a>
 					<div class="footer__socials footer__socials--mob">
 						<a href="#" class="footer__socials-link">
-							<img src="img/tg-icon.svg">
+							<img data-src="img/tg-icon.svg" class="lazyload">
 						</a>
 						<a href="#" class="footer__socials-link">
-							<img src="img/fb-icon.svg">
+							<img data-src="img/fb-icon.svg" class="lazyload">
 						</a>
 					</div>
 				</div>
@@ -1203,10 +1199,10 @@
 			<div class="footer__bottom">
 				<div class="footer__socials footer__socials--desk">
 					<a href="#" class="footer__socials-link">
-						<img src="img/tg-icon.svg">
+						<img data-src="img/tg-icon.svg" class="lazyload">
 					</a>
 					<a href="#" class="footer__socials-link">
-						<img src="img/fb-icon.svg">
+						<img data-src="img/fb-icon.svg" class="lazyload">
 					</a>
 				</div>
 				<div class="footer__docs">
@@ -1251,12 +1247,13 @@
 	<!-- Magnific Popup JS -->
 	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Wow js -->
-	<script async src="js/wow.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
 	<script async src="js/lazysizes.min.js"></script>
+	<script async src="js/ls.bgset.min.js"></script>
 </body>
 
 </html>
